Fix: safari browser UI overlaps header menu buttons. Attempt 3

--- a/src/components/Layout/Header/style.scss
+++ b/src/components/Layout/Header/style.scss
@@ -116,8 +116,7 @@
 
 .mobileMenu {
     width: 100%;
-    height: 100%;
-    min-height: 100lvh;
+    height: 100lvh;
 
     display: none;
     position: fixed;
